--- a/src/components/profile/Background.css
+++ b/src/components/profile/Background.css
@@ -1,3 +1,3 @@
 .BG{
-    background: linear-gradient(172.63deg, #E86CA3 -5.83%, #A57FBD 39.58%, #6B8FD3 57.85%, #5D3A60 82.53%);
+    background: linear-gradient(172.63deg, #E86CA3 -5.83%, #A57FBD 39.58%, #6B8FD3 57.85%, #A57FBD 82.53%);
 }
